--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <video  id="video1" class="video" src="./midias/videos/Sony 4K Demo_ Another World.mp4" poster="./midias/imagens/paisagem4k.jpg"></video>
 
         <div  onmouseover="fecharcontrole(this)" class="controle">
-            <img  onclick="play()" class="btn" src="./midias/imagens/play.svg">
-            <img  onclick="stop()" class="btn" src="./midias/imagens/stop1.svg">
-            <img  onclick="speed()" class="btn" src="./midias/imagens/more-speed.svg">
-            <img  onclick="avanced()" class="btn" src="./midias/imagens/forward5.svg">
-            <img  onclick="retorar()" class="btn" src="./midias/imagens/backwards5.svg">
+            <img onmouseover="fecharcontrole(this)" onclick="play()" class="btn" src="./midias/imagens/play.svg">
+            <img onmouseover="fecharcontrole(this)" onclick="stop()" class="btn" src="./midias/imagens/stop1.svg">
+            <img onmouseover="fecharcontrole(this)" onclick="speed()" class="btn" src="./midias/imagens/more-speed.svg">
+            <img onmouseover="fecharcontrole(this)" onclick="loss()" class="btn" src="./midias/imagens/less-speed.svg">
+            <img onmouseover="fecharcontrole(this)" onclick="avanced()" class="btn" src="./midias/imagens/forward5.svg">
+            <img onmouseover="fecharcontrole(this)" onclick="retorar()" class="btn" src="./midias/imagens/backwards5.svg">
         </div>
     </div>
 
